FileLock.cpp/.h removed. Factory class and Strategy Pattern Context class added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ include_directories(include)
 
 # Source files
 set(SOURCES
-    src/FileLock.cpp
     src/main.cpp
+    src/FileLockFactory.cpp
 )
 
 # Platform-specific sources
