refactor: modernize file locking system to C++20 with pure RAII

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,16 @@
-cmake_minimum_required(VERSION 3.10)
-project(CrossCompatibleFileLock)
+cmake_minimum_required(VERSION 3.25)
+project(CrossCompatibleFileLock
+    VERSION 2.0.0 
+    DESCRIPTION "Cross-platform file locking library"
+    LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+set(CMAKE_CXX_FLAGS_BASE 
+    "-Wall -Wextra -Wpedantic -Wstrict-aliasing -Wcast-align -Wmissing-declarations -Wpointer-arith -Wcast-qual -Wnon-virtual-dtor -Wold-style-cast -Wshadow -Wextra-semi -Werror"
+)
 
 # Include directories
 include_directories(include)
